# hit8

./: .gitignore  cloudbuild.yaml  cursor.md  dev.sh  docker-compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  report.docx  report.md  test prompts.txt  turbo.json
backend/: .dockerignore  .gitkeep  Dockerfile  Dockerfile.prod  PRODUCTION_ISSUES_REVIEW.md  ROUTES_REVIEW.md  STARTUP_DEBUG_PLAN.md  cloudbuild-debug.yaml  cloudbuild.yaml  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt
backend/app/: auth.py  config.py  config.yaml  constants.py  database.py  deps.py  graph.py  llm_router.py  logging.py  logging_utils.py  main.py  main_simplified.py  startup.py  user_config.py  users.json
backend/app/agents/: __init__.py  common.py
backend/app/agents/opgroeien/: __init__.py  constants.py  graph.py  tools.py  tools_future.py  tools_utils.py  utils.py
backend/app/agents/simple/: graph.py
backend/app/api/: __init__.py  checkpointer.py  constants.py  database.py  document_utils.py  file_processing.py  graph_manager.py  lifecycle.py  middleware.py  models.py  observability.py  report_execution.py  storage.py  streaming.py  streaming_utils.py  user_threads.py  utils.py
backend/app/api/routes/: __init__.py  chat.py  config.py  graph.py  health.py  history.py  metadata.py  report.py  usage.py  version.py
backend/app/api/streaming/: __init__.py  async_events.py  constants.py  core.py  envelope.py  events.py  finalize.py  llm.py  nodes.py  policy.py  snapshots.py  tools.py
backend/app/batch/: job_cancellation.py  job_status.py  job_trigger.py  run_report_job.py  types.py
backend/app/flows/: __init__.py  common.py
backend/app/flows/hit8/: __init__.py
backend/app/flows/hit8/hit8/: constants.py
backend/app/flows/hit8/hit8/chat/: __init__.py  graph.py
backend/app/flows/opgroeien/poc/: __init__.py  constants.py  db.py
backend/app/flows/opgroeien/poc/chat/: graph.py  message_window.py  tools.py  tools_future.py  tools_utils.py
backend/app/flows/opgroeien/poc/chat/tools/: __init__.py  extract_entities.py  fetch_website.py  generate_docx.py  generate_xlsx.py  get_procedure.py  get_regelgeving.py  procedures_vector_search.py  query_knowledge_graph.py  regelgeving_vector_search.py  utils.py
backend/app/flows/opgroeien/poc/report/: graph.py  nodes.py  state.py
backend/app/flows/opgroeien/poc/report/tools/: chat.py
backend/app/prompts/: __init__.py  loader.py  system_prompt.yaml
backend/app/prompts/opgroeien/poc/: analyst_system_prompt.yaml  editor_system_prompt.yaml  extract_system_prompt.py  extract_system_prompt.yaml  system_prompt.yaml
backend/app/scripts/: __init__.py  setup_checkpointer.py
backend/tests/: conftest.py
backend/tests/integration/: test_chat_api.py  test_file_upload.py
backend/tests/unit/: test_config.py  test_document_utils.py  test_graph.py  test_graph_agent.py  test_prompt_loader.py  test_tools.py
database/: README.md  atlas.hcl  config.toml  schema.hcl
db/: README.md
frontend/: .dockerignore  Dockerfile  build.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
images/: proxy.pkr.hcl  setup.sh
infra/: MIGRATION.md  README.md  backend.tf  cf-variables.tf  check-and-import.sh  cloudflare.tf  gcp-compute.tf  gcp-functions.tf  gcp-network.tf  gcp-security.tf  gcp-state.tf  gcp-storage.tf  gcp-variables.tf  gcp.tf  import_cloudfare.sh  main.tf  outputs.tf  plan.txt  providers.tf  scw-bastion.tf  scw-variables.tf  scw.tf  state.tf  variables.tf  (+1 more)
infra/scripts/: pyproject.toml  runpod_embedding.py  runpod_llm.py  scaleway_billing_daily.py  stardust.sh  test_embedding.py  test_llm.py
(+243 files in other folders)
