[project]
name = "hit8-backend"
version = "1.0.0"
description = "Hit8 Chat API Backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "types-PyYAML>=6.0.12",
    "langchain-core>=1.2.5",
    "langchain>=0.3.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=1.0.0",
    "langchain-google-genai>=4.1.2",
    "psycopg[binary,pool]>=3.2.0",
    "langfuse>=3.0.0",
    "structlog>=24.0.0",
    "firebase-admin>=7.1.0",
    "google-auth>=2.45.0",
    "supabase>=2.27.0",
    "cryptography>=46.0.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

