[project]
name = "hit8-backend"
version = "0.2.0"
description = "Hit8 Chat API Backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "types-PyYAML>=6.0.12",
    "langchain-core>=1.2.6",
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "langchain-google-genai>=4.1.2",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "langfuse>=3.0.0",
    "structlog>=24.0.0",
    "firebase-admin>=7.1.0",
    "google-auth>=2.45.0",
    "cryptography>=46.0.3",
    "langchain-community>=0.3.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "markdown>=3.5.0",
    "setuptools>=80.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

