[project]
name = "hit8-infra-scripts"
version = "0.1.0"
description = "Infra scripts (e.g. Scaleway billing daily)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "gspread>=6.0.0",
    "google-auth>=2.45.0",
    "google-api-python-client>=2.100.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["*.py"]
